test/classes/initializers/initequals/wrongRecordArgCount.good
wrongRecordArgCount.chpl:2: error: R.init= must have exactly one argument
wrongRecordArgCount.chpl:4: error: R.init= must have exactly one argument
